todos los recientes

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "955988ad",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "True"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error connecting to Supabase database: invalid integer value \"...\" for connection option \"port\"\n",
+      "Error connecting to Supabase database: could not translate host name \"db.ezmbukiqjrvitutacwtp.supabase.co\" to address: nodename nor servname provided, or not known\n",
       "\n"
      ]
     }
