lo que tengo hasta ahora

--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "955988ad",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,15 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error connecting to Supabase database: could not translate host name \"db.ezmbukiqjrvitutacwtp.supabase.co\" to address: nodename nor servname provided, or not known\n",
-      "\n"
+      "Successfully connected to Supabase database.\n"
      ]
     }
    ],
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "b23d9329",
    "metadata": {},
    "outputs": [
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "e90c2198",
    "metadata": {},
    "outputs": [],
@@ -111,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "4391fa5b",
    "metadata": {},
    "outputs": [
@@ -119,9 +118,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error connecting to Supabase database: invalid integer value \"...\" for connection option \"port\"\n",
-      "\n",
-      "Error executing query: 'NoneType' object has no attribute 'cursor'\n"
+      "Successfully connected to Supabase database.\n",
+      "Error executing query: relation \"empleado\" does not exist\n",
+      "LINE 1: SELECT * FROM empleado\n",
+      "                      ^\n",
+      "\n"
      ]
     },
     {
@@ -158,7 +159,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
